# BugInsight

./: .gitignore  Build_from_source.md  CMakeLists.txt  CommandLineOptions.md  Monitored_APIs.md  NOTICE  README.md  Runtime_API.md  Third_party_software.md  ctests.cmake  vcpkg-configuration.json  vcpkg.json
buginsight/: CMakeLists.txt  application_under_test.cpp  application_under_test.hpp  buginsight_rc.in  command_line_parser.cpp  command_line_parser.hpp  log.cpp  log.hpp  main.cpp  options_parser.cpp  options_parser.hpp
buginsight_dll/: CMakeLists.txt  buginsight_rc.in  deadlock_monitor.cpp  deadlock_monitor.hpp  dll_main.cpp  loader.cpp  loader.hpp  synch_locks_held.hpp
buginsight_dll/api_monitors/: critical_section_monitor.cpp  critical_section_monitor.hpp  mutex_monitor.cpp  mutex_monitor.hpp
buginsight_dll/dll_exports/: buginsight_exports.def  deadlock_monitor_api.cpp
buginsight_dll/graphcycles/: graphcycles.cc  graphcycles.h
buginsight_dll/helper/: attributes.hpp  cs_mutex.cpp  cs_mutex.hpp  dbghelp_api.cpp  dbghelp_api.hpp  hex_dump.hpp  log.cpp  log.hpp  log_helper.cpp  log_helper.hpp  low_level_alloc.cc  low_level_alloc.h  one_shot_timer.cpp  one_shot_timer.hpp  run_time_options.hpp  spinlock.hpp  timer.hpp  xxhasher.cpp  xxhasher.hpp
buginsight_dll/iat/: iat_helper.cpp  iat_helper.hpp  iat_patching.cpp  iat_patching.hpp  ldr_loader_lock.cpp  ldr_loader_lock.hpp  modules_helper.cpp  modules_helper.hpp  patched_functions.cpp  patched_functions.hpp
buginsight_dll/leak_check/: _aligned_malloc_monitor.cpp  _aligned_malloc_monitor.hpp  getenvironmentvariable_monitor.cpp  getenvironmentvariable_monitor.hpp  getprocaddress_monitor.cpp  getprocaddress_monitor.hpp  globalalloc_monitor.cpp  globalalloc_monitor.hpp  heap_monitor.cpp  heap_monitor.hpp  leak_types.cpp  leak_types.hpp  local_alloc_monitor.cpp  local_alloc_monitor.hpp  malloc_monitor.cpp  malloc_monitor.hpp  memory_helper.cpp  memory_helper.hpp  memory_leak_map_with_callstack.cpp  memory_leak_map_with_callstack.hpp  strdup_monitor.cpp  strdup_monitor.hpp
buginsight_dll/stacktrace/: stacktrace.cc  stacktrace.h
buginsight_dll/thread_history/: thread_history_helper.cpp  thread_history_helper.hpp
buginsight_dll/thread_watchdog/: thread_watchdog.cpp  thread_watchdog.hpp
examples/example_deadlock/: CMakeLists.txt  Example_Output.md  main.cpp
examples/example_memory_leak/: CMakeLists.txt  Example_Output.md  main.cpp
shared/: scope_exit.hpp  shared_settings.cpp  shared_settings.hpp
tests/buginsight_tests_leak_dll/: CMakeLists.txt  dl_main.cpp  exports.def  leaks.hpp  vld_bugs.hpp
tests/buginsight_tests_leak_dll_mini/: CMakeLists.txt  dl_main.cpp
tests/buginsight_tests_leak_dll_mini2/: CMakeLists.txt  dl_main.cpp
tests/buginsight_tests_leak_exe_load_dll/: CMakeLists.txt  main.cpp
tests/buginsight_tests_leak_exe_md/: CMakeLists.txt  leaks.hpp  main.cpp
tests/buginsight_tests_leak_unit_tests_md/: CMakeLists.txt  allocator.hpp  main.cpp  test_aligned_malloc_bad.cpp  test_aligned_malloc_good.cpp  test_globalalloc_good.cpp  test_globallalloc_bad.cpp  test_heapalloc_bad.cpp  test_heapalloc_good.cpp  test_loadlibrary_good.cpp  test_localalloc_bad.cpp  test_localalloc_good.cpp  test_malloc_bad.cpp  test_malloc_good.cpp  test_new_delete_bad.cpp  test_new_delete_good.cpp  test_openssl_static_good.cpp  test_strdup_bad.cpp  test_strdup_good.cpp  test_winapi_bad.cpp  test_winapi_good.cpp  utest.h
tests/buginsight_tests_lock_unit_tests_md/: CMakeLists.txt  critical_section_linux.hpp  doctest.h  main.cpp  test_c_file.c  test_c_file.h  test_critical_section_lock_order_inversion.cpp  test_critical_section_lock_order_ok_or_disabled.cpp  test_std_mutex_bad.cpp  test_std_mutex_good.cpp  test_std_recursive_mutex_bad.cpp  test_std_recursive_mutex_good.cpp  test_strdup_good.cpp  test_thread_watchdog_bad.cpp  test_thread_watchdog_good.cpp
tests/buginsight_tests_lock_unit_tests_md/utils/: cs.cpp  cs.hpp  random_numbers.cpp  random_numbers.hpp  signal.cpp  signal.hpp  spinlock.hpp
tests/shared/: test_helper.cpp  test_helper.hpp
